# Autonomous-AI-Research-Report-Generation-System

./: .env  .env.example  CLAUDE.md  DAY1_PLAN.md  DAY1_SUMMARY.md  README.md  jobs_log.json  main.py  pyproject.toml  requirements.txt  research.db
app/: main.py
app/routers/: __init__.py  reports.py  research.py  research_route.py
app/schemas/: job.py  research.py
app/services/: job_service.py  n8n_service.py  notification_service.py  report_service.py  research_service.py  search_service.py
app/utils/: logger.py
reports/: report_b6b018e0_20260530T131525Z.md
