[project]
name = "ai-assist-researchgeneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "markdown>=3.10.2",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.48.0",
]
